# scholar-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  design_decisions.md
eval/: download_papers.py  generate_questions.py  metrics.py  papers.txt  questions.jsonl  ragas_eval.py  retrieval_ablation.py  run_full_eval.py
eval/results/: ablation_A_dense_only.json  ablation_B_dense_plus_rerank.json  ablation_C_hybrid_no_rerank.json  ablation_D_hybrid_plus_rerank.json  ablation_results.md  live_A_dense_only.jsonl  live_B_dense_plus_rerank.jsonl  live_C_hybrid_no_rerank.jsonl  live_D_hybrid_plus_rerank.jsonl
scripts/: bootstrap.sh  update_readme_metrics.py
src/rag/: __init__.py  config.py  logging_config.py
src/rag/api/: dependencies.py  main.py  routes.py  schemas.py
src/rag/embeddings/: bge_embedder.py
src/rag/generation/: llm.py  prompts.py  rag_chain.py
src/rag/guards/: citation_checker.py
src/rag/ingestion/: chunker.py  pdf_loader.py  pipeline.py
src/rag/observability/: __init__.py  langfuse_tracer.py  metrics.py  token_counter.py
src/rag/retrieval/: bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  reranker.py  sparse_retriever.py  types.py
src/rag/vectorstore/: qdrant_store.py
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_chunker.py  test_citation_checker.py  test_eval_metrics.py  test_retrieval.py  test_token_counter.py
