[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-rag-assistant"
version = "1.0.0"
description = "Production-grade RAG system for academic literature QA with hybrid retrieval and cross-encoder reranking."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Baran Ozgurtas" }]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "llm",
    "qdrant",
    "langchain",
    "langgraph",
    "bge",
    "qwen",
    "ragas",
    "hybrid-search",
    "cross-encoder",
    "fastapi",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Repository = "https://github.com/baranozgurtas/research-rag-assistant"
Issues = "https://github.com/baranozgurtas/research-rag-assistant/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rag*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "data", "eval/results", "qdrant_storage"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function call in default arg (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["rag"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: tests requiring Qdrant + Ollama running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/rag"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
